feat(config): exploration on switching to ml_collection config

--- a/examples/notebooks/boltzmann/fsm-3d.ipynb
+++ b/examples/notebooks/boltzmann/fsm-3d.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The fast spectral method for 3D"
+    "# The fast spectral method for 3D\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "from kipack.collision.inelastic import FSInelasticVHSCollision\n",
     "from kipack.collision.vmesh import SpectralMesh\n",
-    "from config_3d import get_config\n"
+    "from config import get_config\n"
    ]
   },
   {
@@ -110,21 +110,58 @@
     }
    ],
    "source": [
-    "cfg = get_config()\n",
+    "cfg = get_config(\"3d\")\n",
     "vmesh = SpectralMesh(cfg)\n",
     "coll = FSInelasticVHSCollision(cfg, vmesh)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On CPU using pyFFTW\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 11.77ms, error: 2.6902299154341877e-06\n"
+      "Runtime: 344.33ms, error: 2.6902299154346214e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_0 = time.time()\n",
+    "Q = coll(isotropic_f(vmesh.center), device=\"cpu\")\n",
+    "dt = time.time() - t_0\n",
+    "\n",
+    "print(\n",
+    "    f\"Runtime: {1000 * dt:.2f}ms, error: {np.max(np.abs(Q - extQ(vmesh.center)))}\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On GPU using Cupy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime: 12.37ms, error: 2.6902299154341877e-06\n"
      ]
     }
    ],
@@ -158,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
