--- a/examples/notebooks/boltzmann/fsm-2d.ipynb
+++ b/examples/notebooks/boltzmann/fsm-2d.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from kipack.collision.inelastic import FSInelasticVHSCollision\n",
-    "from kipack.collision.vmesh import SpectralMesh\n",
-    "from config_2d import get_config\n"
+    "from kipack.collision import SpectralMesh\n",
+    "from config import get_config\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,9 +79,46 @@
     }
    ],
    "source": [
-    "cfg = get_config()\n",
+    "cfg = get_config(\"2d\")\n",
     "vmesh = SpectralMesh(cfg)\n",
     "coll = FSInelasticVHSCollision(cfg, vmesh)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On CPU using pyFFTW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime: 80.55ms, error: 1.710418956533781e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_0 = time.time()\n",
+    "Q = coll(bkw_f(vmesh.center), device=\"cpu\")\n",
+    "dt = time.time() - t_0\n",
+    "\n",
+    "print(\n",
+    "    f\"Runtime: {1000* dt:.2f}ms, error: {np.max(np.abs(Q - ext_Q(vmesh.center)))}\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On GPU using Cupy"
    ]
   },
   {
@@ -93,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 5.40ms, error: 1.7104168583484674e-11\n"
+      "Runtime: 5.63ms, error: 1.7104168583484674e-11\n"
      ]
     }
    ],
@@ -124,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
