docs: update fsm-2d and 3d notebook

--- a/examples/notebooks/boltzmann/fsm-3d.ipynb
+++ b/examples/notebooks/boltzmann/fsm-3d.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,21 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:absl:3 dimensional collision model.\n",
-      "INFO:absl:Number of velocity cells: 32.\n",
-      "INFO:absl:Velocity domain: [-8.82842712474619, 8.82842712474619].\n",
-      "INFO:absl:e: 1.0\n",
-      "INFO:absl:Collision model precomputation finished!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg = get_config(\"3d\")\n",
     "vmesh = SpectralMesh(cfg)\n",
@@ -124,17 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Runtime: 344.33ms, error: 2.6902299154346214e-06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t_0 = time.time()\n",
     "Q = coll(isotropic_f(vmesh.center), device=\"cpu\")\n",
@@ -154,20 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Runtime: 12.37ms, error: 2.6902299154341877e-06\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "\n",
+    "@jax.jit\n",
+    "def coll_gpu(x):\n",
+    "    return coll(x, device=\"gpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "t_0 = time.time()\n",
-    "Q = coll(isotropic_f(vmesh.center), device=\"gpu\")\n",
+    "Q = coll_gpu(isotropic_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
@@ -195,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
