--- a/examples/notebooks/boltzmann/fsm-2d.ipynb
+++ b/examples/notebooks/boltzmann/fsm-2d.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,33 +18,33 @@
     "from absl import logging\n",
     "import time\n",
     "\n",
-    "logging.set_verbosity(\"info\")\n"
+    "logging.set_verbosity(\"info\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from kipack.collision.inelastic import FSInelasticVHSCollision\n",
     "from kipack.collision import SpectralMesh\n",
-    "from config import get_config\n"
+    "from config import get_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bkw_f(v):\n",
     "    t = 0.5\n",
     "    K = 1 - 0.5 * np.exp(-t / 8)\n",
-    "    v_norm = (v ** 2)[:, None] + v ** 2\n",
+    "    v_norm = (v**2)[:, None] + v**2\n",
     "    return (\n",
     "        1\n",
-    "        / (2 * pi * K ** 2)\n",
+    "        / (2 * pi * K**2)\n",
     "        * np.exp(-0.5 * v_norm / K)\n",
     "        * (2 * K - 1 + 0.5 * v_norm * (1 - K) / K)\n",
     "    )\n",
@@ -54,34 +54,22 @@
     "    t = 0.5\n",
     "    K = 1 - np.exp(-t / 8) / 2\n",
     "    dK = np.exp(-t / 8) / 16\n",
-    "    v_norm = (v ** 2)[:, None] + v ** 2\n",
-    "    df = (-2 / K + v_norm / (2 * K ** 2)) * bkw_f(v) + 1 / (\n",
-    "        2 * pi * K ** 2\n",
-    "    ) * np.exp(-v_norm / (2 * K)) * (2 - v_norm / (2 * K ** 2))\n",
-    "    return df * dK\n"
+    "    v_norm = (v**2)[:, None] + v**2\n",
+    "    df = (-2 / K + v_norm / (2 * K**2)) * bkw_f(v) + 1 / (\n",
+    "        2 * pi * K**2\n",
+    "    ) * np.exp(-v_norm / (2 * K)) * (2 - v_norm / (2 * K**2))\n",
+    "    return df * dK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:absl:2 dimensional collision model.\n",
-      "INFO:absl:Number of velocity cells: 64.\n",
-      "INFO:absl:Velocity domain: [-7.724873734152916, 7.724873734152916].\n",
-      "INFO:absl:e: 1.0\n",
-      "INFO:absl:Collision model precomputation finished!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg = get_config(\"2d\")\n",
     "vmesh = SpectralMesh(cfg)\n",
-    "coll = FSInelasticVHSCollision(cfg, vmesh)\n"
+    "coll = FSInelasticVHSCollision(cfg, vmesh)"
    ]
   },
   {
@@ -93,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Runtime: 80.55ms, error: 1.710418956533781e-11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t_0 = time.time()\n",
     "Q = coll(bkw_f(vmesh.center), device=\"cpu\")\n",
@@ -111,7 +91,7 @@
     "\n",
     "print(\n",
     "    f\"Runtime: {1000* dt:.2f}ms, error: {np.max(np.abs(Q - ext_Q(vmesh.center)))}\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -123,25 +103,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Runtime: 5.63ms, error: 1.7104168583484674e-11\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "\n",
+    "\n",
+    "@jax.jit\n",
+    "def coll_gpu(x):\n",
+    "    return coll(x, device=\"gpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "t_0 = time.time()\n",
-    "Q = coll(bkw_f(vmesh.center), device=\"gpu\")\n",
+    "Q = coll_gpu(bkw_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
     "    f\"Runtime: {1000* dt:.2f}ms, error: {np.max(np.abs(Q - ext_Q(vmesh.center)))}\"\n",
-    ")\n"
+    ")"
    ]
   }
  ],
@@ -161,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
