feat: replace cupy by jax for fsm, linear_boltz (including rbm)

--- a/examples/notebooks/boltzmann/fsm-3d.ipynb
+++ b/examples/notebooks/boltzmann/fsm-3d.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,24 +17,18 @@
     "from math import pi\n",
     "from absl import logging\n",
     "import time\n",
+    "import jax\n",
     "\n",
-    "logging.set_verbosity(\"info\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from kipack.collision.inelastic import FSInelasticVHSCollision\n",
     "from kipack.collision.vmesh import SpectralMesh\n",
-    "from config import get_config\n"
+    "from config import get_config\n",
+    "\n",
+    "logging.set_verbosity(\"info\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:absl:3 dimensional collision model.\n",
+      "INFO:absl:Number of velocity cells: 32.\n",
+      "INFO:absl:Velocity domain: [-8.82842712474619, 8.82842712474619].\n",
+      "INFO:absl:e: 1.0\n",
+      "INFO:absl:Collision model precomputation on cpu has finished!\n",
+      "INFO:absl:e: 1.0\n",
+      "INFO:absl:Collision model precomputation on gpu has finished!\n"
+     ]
+    }
+   ],
    "source": [
     "cfg = get_config(\"3d\")\n",
     "vmesh = SpectralMesh(cfg)\n",
-    "coll = FSInelasticVHSCollision(cfg, vmesh)\n"
+    "\n",
+    "coll = FSInelasticVHSCollision(cfg, vmesh, device=\"cpu\")\n",
+    "coll_gpu = FSInelasticVHSCollision(cfg, vmesh, device=\"gpu\")\n"
    ]
   },
   {
@@ -112,12 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime: 427.51ms, error: 2.6901211073158564e-06\n"
+     ]
+    }
+   ],
    "source": [
     "t_0 = time.time()\n",
-    "Q = coll(isotropic_f(vmesh.center), device=\"cpu\")\n",
+    "Q = coll(isotropic_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
@@ -134,25 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jax\n",
-    "\n",
-    "@jax.jit\n",
-    "def coll_gpu(x):\n",
-    "    return coll(x, device=\"gpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime: 5.07ms, error: 2.6918714866042137e-06\n"
+     ]
+    }
+   ],
    "source": [
     "t_0 = time.time()\n",
-    "Q = coll_gpu(isotropic_f(vmesh.center))\n",
+    "Q = jax.jit(coll_gpu)(isotropic_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
