refactor: rewritten collision using jax

--- a/examples/notebooks/boltzmann/fsm-2d.ipynb
+++ b/examples/notebooks/boltzmann/fsm-2d.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,14 @@
     "from math import pi\n",
     "from absl import logging\n",
     "import time\n",
+    "import jax\n",
     "\n",
     "logging.set_verbosity(\"info\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:absl:2 dimensional collision model.\n",
+      "INFO:absl:Number of velocity cells: 64.\n",
+      "INFO:absl:Velocity domain: [-7.724873734152916, 7.724873734152916].\n"
+     ]
+    }
+   ],
    "source": [
     "cfg = get_config(\"2d\")\n",
-    "vmesh = SpectralMesh(cfg)\n",
-    "coll = FSInelasticVHSCollision(cfg, vmesh)"
+    "vmesh = SpectralMesh(cfg)"
    ]
   },
   {
@@ -81,12 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:absl:e: 1.0\n",
+      "INFO:absl:Collision model precomputation finishes!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime: 309.40ms, error: 1.7104188186368172e-11\n"
+     ]
+    }
+   ],
    "source": [
+    "coll_pyfftw = FSInelasticVHSCollision(cfg, vmesh, use_pyfftw=True)\n",
+    "\n",
     "t_0 = time.time()\n",
-    "Q = coll(bkw_f(vmesh.center), device=\"cpu\")\n",
+    "Q = coll_pyfftw(bkw_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
@@ -103,26 +131,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:absl:e: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "import jax\n",
-    "\n",
-    "\n",
-    "@jax.jit\n",
-    "def coll_gpu(x):\n",
-    "    return coll(x, device=\"gpu\")"
+    "coll_jax = FSInelasticVHSCollision(cfg, vmesh)\n",
+    "coll = jax.jit(lambda x: coll_jax(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime: 2.30ms, error: 5.21540641784668e-08\n"
+     ]
+    }
+   ],
    "source": [
     "t_0 = time.time()\n",
-    "Q = coll_gpu(bkw_f(vmesh.center))\n",
+    "Q = coll(bkw_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
@@ -147,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
