--- a/examples/notebooks/boltzmann/fsm-3d.ipynb
+++ b/examples/notebooks/boltzmann/fsm-3d.ipynb
@@ -97,20 +97,13 @@
      "text": [
       "INFO:absl:3 dimensional collision model.\n",
       "INFO:absl:Number of velocity cells: 32.\n",
-      "INFO:absl:Velocity domain: [-8.82842712474619, 8.82842712474619].\n",
-      "INFO:absl:e: 1.0\n",
-      "INFO:absl:Collision model precomputation on cpu has finished!\n",
-      "INFO:absl:e: 1.0\n",
-      "INFO:absl:Collision model precomputation on gpu has finished!\n"
+      "INFO:absl:Velocity domain: [-8.82842712474619, 8.82842712474619].\n"
      ]
     }
    ],
    "source": [
     "cfg = get_config(\"3d\")\n",
-    "vmesh = SpectralMesh(cfg)\n",
-    "\n",
-    "coll = FSInelasticVHSCollision(cfg, vmesh, device=\"cpu\")\n",
-    "coll_gpu = FSInelasticVHSCollision(cfg, vmesh, device=\"gpu\")\n"
+    "vmesh = SpectralMesh(cfg)"
    ]
   },
   {
@@ -122,20 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:absl:e: 1.0\n",
+      "INFO:absl:Collision model precomputation finishes!\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 427.51ms, error: 2.6901211073158564e-06\n"
+      "Runtime: 1132.86ms, error: 2.6901211073158564e-06\n"
      ]
     }
    ],
    "source": [
+    "coll_pyfftw = FSInelasticVHSCollision(cfg, vmesh, use_pyfftw=True)\n",
+    "\n",
     "t_0 = time.time()\n",
-    "Q = coll(isotropic_f(vmesh.center))\n",
+    "Q = coll_pyfftw(isotropic_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
@@ -152,20 +155,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:absl:e: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "coll_jax = FSInelasticVHSCollision(cfg, vmesh)\n",
+    "\n",
+    "coll = jax.jit(lambda x: coll_jax(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 5.07ms, error: 2.6918714866042137e-06\n"
+      "Runtime: 2.15ms, error: 2.6918714866042137e-06\n"
      ]
     }
    ],
    "source": [
     "t_0 = time.time()\n",
-    "Q = jax.jit(coll_gpu)(isotropic_f(vmesh.center))\n",
+    "Q = coll(isotropic_f(vmesh.center))\n",
     "dt = time.time() - t_0\n",
     "\n",
     "print(\n",
@@ -193,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
