--- a/examples/notebooks/linear_transport/rbm_0d.ipynb
+++ b/examples/notebooks/linear_transport/rbm_0d.ipynb
@@ -2,13 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "end_execution_time": "2020-08-24T01:30:40.935Z",
-     "start_execution_time": "2020-08-24T01:30:40.554Z"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
@@ -16,18 +11,15 @@
     "%matplotlib inline\n",
     "\n",
     "import os\n",
-    "os.chdir(\"/home/vscode/kipack/\")"
+    "os.chdir(\"/workspaces/kipack\")\n",
+    "\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "end_execution_time": "2020-08-24T01:33:36.829Z",
-     "start_execution_time": "2020-08-24T01:33:36.785Z"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -38,42 +30,73 @@
     "logger.setLevel(logging.CRITICAL)\n",
     "\n",
     "import matplotlib.pyplot as plt   \n",
-    "import numpy as np\n",
-    "import cupy as cp"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": [],
-    "vscode": {
-     "end_execution_time": "2020-08-24T01:33:58.734Z",
-     "start_execution_time": "2020-08-24T01:33:57.244Z"
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500/500 [==============================] - 1s 1ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "from examples.linear_transport.rbm_0d import run\n",
     "dt = 0.001\n",
     "nt = 500\n",
     "tfinal = dt * nt\n",
-    "macro_frames, sol_frames, dv = run(dt=dt, nt=nt, coll=\"linear\", scheme=\"Euler\")"
+    "output = run(dt=dt, nt=nt, coll=\"linear\", scheme=\"Euler\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "end_execution_time": "2020-08-23T13:20:10.526Z",
-     "start_execution_time": "2020-08-23T13:20:10.478Z"
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mzip\u001b[39;49m(\u001b[39m*\u001b[39;49moutput[\u001b[39m\"\u001b[39;49m\u001b[39mmacro_frames\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not iterable"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "rho, m, E = zip(*macro_frames)\n",
-    "sols, err = zip(*sol_frames)"
+    "zip(*output[\"macro_frames\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rho \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39;49m(\u001b[39m*\u001b[39;49moutput[\u001b[39m\"\u001b[39;49m\u001b[39mmacro_frames\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[1;32m      2\u001b[0m sols, err \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39moutput[\u001b[39m\"\u001b[39m\u001b[39msol_frames\u001b[39m\u001b[39m\"\u001b[39m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "rho = zip(*output[\"macro_frames\"])\n",
+    "sols, err = zip(*output[\"sol_frames\"])"
    ]
   },
   {
@@ -89,12 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "end_execution_time": "2020-08-23T13:20:14.005Z",
-     "start_execution_time": "2020-08-23T13:20:13.198Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "t_idx = -1\n",
@@ -119,12 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "end_execution_time": "2020-08-23T13:08:45.160Z",
-     "start_execution_time": "2020-08-23T13:08:44.810Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(4,3))\n",
@@ -142,12 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "end_execution_time": "2020-08-23T12:55:07.087Z",
-     "start_execution_time": "2020-08-23T12:55:06.440Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 2, figsize=(8, 3))\n",
@@ -183,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
